Fix padding/alignment for user report columns

--- a/public/style.css
+++ b/public/style.css
@@ -65,9 +65,27 @@ a:hover {
   color: red;
 }
 
-.column {
+.column_left {
     float: left;
     width: 50%;
+    text-align: center;
+    padding-top: 3%;
+    padding-left: 25%;
+    padding-right: 3%;
+    /*background-color: yellow;*/
+    box-sizing: border-box;
+}
+
+.column_right {
+    float: right;
+    width: 50%;
+    /*background-color: green;*/
+    text-align: center;
+    padding-top: 3%;
+    padding-right: 25%;
+    padding-left: 3%;
+    /*background-color: yellow;*/
+    box-sizing: border-box;
 }
 
 /* Clear floats after the columns */
@@ -75,4 +93,11 @@ a:hover {
     content: "";
     display: table;
     clear: both;
+}
+
+/* Responsive layout - when the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other */
+@media (max-width: 600px) {
+    .column {
+        width: 100%;
+    }
 }
